fix tables in documentation being cut off

--- a/documentation/pdf.css
+++ b/documentation/pdf.css
@@ -566,6 +566,7 @@ body table {
   display: block;
   width: 100%;
   overflow: auto;
+  font-size: 8px;
 }
 
 body table th {
